# fodmap-recipe-helper

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: database.rs  indigent.rs  main.rs  menu.rs  recipes.rs
tests/resources/: test_indigents.csv
