[package]
name = "fodmap-recipe-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
log = "0.4.20"
env_logger = "0.10.1"
tui = "0.19.0"
crossterm = "0.27.0"
assert_cmd = "2.0.12"
serde = { version = "1.0.192", features = ["derive"] }
csv = "1.3.0"
time = "0.3.31"
sqlite = "0.34.0"